--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@
 *.war
 *.ear
 mysqlkeys.php
-*/mysqlkeys.php
+**/mysqlkeys.php
+dbconf.php
+**/dbconf.php
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
